<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:id="@+id/id_act_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/id_area_base"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_tiffany_blue"
            android:orientation="vertical">

            <!-- controls area -->
            <android.support.constraint.ConstraintLayout
                android:id="@+id/id_area_header"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/color_tiffany_blue_dark"
                android:elevation="8dp"
                >

                <Button
                    android:id="@+id/id_button_exit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_exit_white_24dp"
                    android:gravity="center"
                    android:scaleType="center"
                    android:textAllCaps="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/id_textview_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/main_activity_title_default"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/id_button_apply_connect"
                    app:layout_constraintStart_toEndOf="@+id/id_button_exit"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/id_button_apply_connect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_apply_white_24dp"
                    android:gravity="center"
                    android:scaleType="center"
                    android:textAllCaps="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>

            <!-- main area -->
            <android.support.constraint.ConstraintLayout
                android:id="@+id/id_area_work"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <!-- page area -->
                <FrameLayout
                    android:id="@+id/id_area_main"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/id_area_tab"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                </FrameLayout>

                <!-- vertical tabs -->
                <LinearLayout
                    android:id="@+id/id_area_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/color_tiffany_blue_dark"
                    android:layout_marginEnd="0dp"
                    android:layout_marginTop="0dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <Button
                        android:id="@+id/id_button_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/color_transparent"
                        android:text="@string/tab_name_info"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/id_button_common"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/color_transparent"
                        android:text="@string/tab_name_common"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/id_button_global"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/color_transparent"
                        android:text="@string/tab_name_global"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/id_button_track1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/color_transparent"
                        android:text="@string/tab_name_track1"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/id_button_track2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/color_transparent"
                        android:text="@string/tab_name_track2"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/id_button_track3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/color_transparent"
                        android:text="@string/tab_name_track3"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/id_button_ibutton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/color_transparent"
                        android:text="@string/tab_name_ibutton"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>
        <!-- NOTE No need to develop a system service for keyboard, there is a standard View for that (well, not completely standard, its in a funny package 'android.inputmethodservice'. -->
        <!-- NOTE The graphical layout does not know the package ('java.lang.NoClassDefFoundError: Could not initialize class android.inputmethodservice.KeyboardView') so the keyboard is not shown. -->
        <android.inputmethodservice.KeyboardView
            android:id="@+id/keyboardview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:visibility="gone" />

    </RelativeLayout>
</layout>